--- a/Flask-Forms-Lab/templates/friend_exists.html
+++ b/Flask-Forms-Lab/templates/friend_exists.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <h1> hello {{n}}</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,6 +14,11 @@
 
 </head>
 <body>
+  {%if n in facebook_friends%}
+  <p>true</p>
+  {%else%}
+  <p> false</p>
+  {% endif %} 
 
 
 
